# aimo3

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  LICENSE_NOTE.md  README.md  directory_structure.txt  entry_points.md  kaggle_forum.md  pyproject.toml  requirements.txt  settings.json
cfgs/: dpsk-qwen-1.5b.yaml  dpsk-qwen-14b-awq.yaml  dpsk-qwen-14b-finetune-v1-epoch2-awq.yaml  dpsk-qwen-14b-finetune-v1-epoch2.yaml  dpsk-qwen-14b-finetune-v1-epoch4-awq-32codeprompt.yaml  dpsk-qwen-14b-finetune-v1-epoch4-awq-32codepromptv2.yaml  dpsk-qwen-14b-finetune-v1-epoch4-awq-diversesysprompt.yaml  dpsk-qwen-14b-finetune-v1-epoch4-awq.yaml  dpsk-qwen-14b-finetune-v1-epoch4-repkv-awq-kv4.yaml  dpsk-qwen-14b-finetune-v1-epoch4-repkv-awq.yaml  dpsk-qwen-14b-finetune-v1-epoch4.yaml  dpsk-qwen-14b.yaml
data/: aime_2025_30.csv  reference_2.csv  stub.csv
imagination_aimo2/: aggregators.py  local_eval.py
imagination_aimo2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
imagination_aimo3/: backup_submission.ipynb  local_eval.py  local_eval_kaggle.py
results/0325-dpsk-qwen-1.5b/seed42/reference/: config.yaml  local_eval.py
results/0325-dpsk-qwen-1.5b/seed42/reference_2/: config.yaml  results.json  statistics.json
scripts/: analyze_early_stop.py  analyze_llm_vote.py  deduplicate_sft_data.py  filter_dpo_data.py  plot_table_local.py  quant_awq.py  quant_rep_kv.py  run_cfg.sh  run_convert.sh  run_deduplicate.sh  run_dpo.sh  run_filter.sh  run_quant_awq.sh  run_quant_rep_kv.sh  run_sft.sh
(+10 files in other folders)
